--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,9 @@
     "dev": "deno run --watch main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "pgsql-ast-parser": "npm:pgsql-ast-parser",
+    "@duckdb/duckdb-wasm": "npm:@duckdb/duckdb-wasm",
+    "zod": "npm:zod"
   }
 }
