--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  packages: write
+  id-token: write
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -21,7 +26,7 @@ jobs:
           password: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build image
-        run: docker build -t ghcr.io/${{github.repository_owner}}/secure-mcp:latest .
+        run: docker build -t ghcr.io/${{github.repository_owner}}/secure-mcp-db:latest .
 
       - name: Push image
-        run: docker push ghcr.io/${{github.repository_owner}}/secure-mcp:latest
+        run: docker push ghcr.io/${{github.repository_owner}}/secure-mcp-db:latest
