--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,8 @@ allowlist:
           description: "Public-facing product name."
         price:
           description: "Public sale price visible to customers."
+        category:
+          description: "Product classification (e.g. Electronics, Home)."
 
     orders:
       safe_columns:
